# trackmini

./: .gitignore  CMakeLists.txt  LICENSE.md  README  justfile
assets/shaders/: mesh.frag  mesh.vert  triangle.frag  triangle.vert
cmake/: CompilerOptions.cmake
src/: CMakeLists.txt  main.cpp
src/editor/: Command.h  CommandHistory.cpp  CommandHistory.h  EditorState.cpp  EditorState.h  Raycast.h  TrackRenderer.cpp  TrackRenderer.h
src/engine/: CMakeLists.txt  Clock.h  EventBus.h  GameLoop.cpp  GameLoop.h
src/math/: Mat4.h  Math.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
src/physics/: RigidBody.cpp  RigidBody.h  Vehicle.cpp  Vehicle.h  VehicleConfig.h  WheelRaycast.cpp  WheelRaycast.h
src/platform/: Window.cpp  Window.h
src/renderer/: Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/track/: BlockCatalog.cpp  BlockCatalog.h  BlockId.h  Grid.cpp  Grid.h  Track.cpp  Track.h  TrackSerializer.h
tests/: CMakeLists.txt
tests/editor/: CMakeLists.txt  test_command_history.cpp  test_raycast.cpp
tests/engine/: CMakeLists.txt  test_clock.cpp  test_eventbus.cpp  test_gameloop.cpp
tests/math/: CMakeLists.txt  test_mat4.cpp  test_quat.cpp  test_vec3.cpp
tests/physics/: CMakeLists.txt  test_rigidbody.cpp  test_vehicle.cpp
tests/platform/: CMakeLists.txt  test_window.cpp
tests/renderer/: CMakeLists.txt  test_camera.cpp  test_shader.cpp
tests/track/: CMakeLists.txt  test_catalog.cpp  test_grid.cpp  test_serializer.cpp
